--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,13 @@
   padding: 0;
 }
 
+html,
+body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -27,4 +34,12 @@ ul {
 img {
   max-width: 100%;
   height: auto;
+}
+
+.app-container {
+  flex: 1 0 auto; 
+}
+
+footer {
+  flex-shrink: 0; 
 }
