--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,7 +2,7 @@
 
 .header-container {
   box-shadow: 0px 1px 10px 0px #00000026;
-  
+
   &:first-of-type {
     box-shadow: none;
     background-color: #343434;
@@ -53,7 +53,7 @@
     list-style: none;
     display: flex;
     gap: 30px;
-    
+
     li {
       height: 65px;
       line-height: 65px;
@@ -62,21 +62,20 @@
         border-bottom: 1px solid #343434;
       }
     }
-
   }
 
   .header-interact {
     display: flex;
     gap: 20px;
 
-    .search {      
+    .search {
       position: relative;
 
       input {
         width: 282px;
         height: 40px;
         padding: 0 20px 0 40px;
-        background-color: #D9D9D9;
+        background-color: #d9d9d9;
         outline: none;
         border: none;
         border-radius: 15px;
@@ -87,13 +86,11 @@
         left: 9px;
         top: 9px;
       }
-
     }
 
     img {
       width: 24px;
       cursor: pointer;
     }
-
   }
 }
