--- a/src/components/Hero/ProductInfo/ProductInfo.scss
+++ b/src/components/Hero/ProductInfo/ProductInfo.scss
@@ -1,7 +1,6 @@
 @import "../../../styles/variables";
 
 .product-info {
-
   .product-name {
     text-transform: uppercase;
 
@@ -30,11 +29,13 @@
     }
   }
 
-  .product-size, .product-color {
+  .product-size,
+  .product-color {
     padding-bottom: 20px;
   }
 
-  .sizes, .colors {
+  .sizes,
+  .colors {
     padding-top: 10px;
   }
 
@@ -67,7 +68,7 @@
 
   .product-description {
     padding-bottom: 43px;
-    border-bottom: 1px solid #CCCCCC;
+    border-bottom: 1px solid #cccccc;
 
     h4 {
       font-size: $font-lg;
