--- a/src/components/UI/ColorBox/ColorBox.scss
+++ b/src/components/UI/ColorBox/ColorBox.scss
@@ -6,7 +6,7 @@
   border-radius: 50%;
   border: 1px solid #343434;
   border-color: transparent;
-  box-shadow: 0px 4px 4px 0px #CCC;
+  box-shadow: 0px 4px 4px 0px #ccc;
 
   &.selected-color {
     position: relative;
