--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,9 +10,8 @@ $font-lg: 20px;
 // Extra large
 $font-xl: 26px;
 
-
 /* Colors */
 $main-black: #000;
 $main-white: #fff;
-$main-grey: #D9D9D9;
-$main-green: #4AAA4E;
+$main-grey: #d9d9d9;
+$main-green: #4aaa4e;
