--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
 /* Initial styling */
-*, *::after, *::before {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -37,9 +39,9 @@ img {
 }
 
 .app-container {
-  flex: 1 0 auto; 
+  flex: 1 0 auto;
 }
 
 footer {
-  flex-shrink: 0; 
+  flex-shrink: 0;
 }
