--- a/src/components/UI/ColorBox/ColorBox.scss
+++ b/src/components/UI/ColorBox/ColorBox.scss
@@ -20,7 +20,7 @@
       transform: translateX(-50%);
       width: 24px;
       height: 24px;
-      background: url("../../assets/icons/arrow-pick-up.png");
+      background: url("../../../assets/icons/arrow-pick-up.png");
     }
   }
 }
